2005-11-14  Sven Panne  <sven.panne@aedion.de>

	* src/al_ext.h, src/alc/alc_context.c: Cleaned up
	_alGetExtensionProcAddress mess a tiny bit.

2005-11-11  Sven Panne  <sven.panne@aedion.de>

	* src/al_able.c: Set an AL_INVALID_OPERATION when there is no
	current context to ease debugging.

	* src/al_able.c, src/al_distance.c, src/al_state.c: What to do
	exactly regarding error handling when there is no current context
	is a little bit of a dark corner in the spec. But under every
	interpretation of the spec, setting an ALC error is completely
	wrong. Now we call the internal error setter with
	AL_INVALID_OPERATION, even when there is no current context to
	record the error. This makes debugging easier and the error could
	e.g. be reported to the user in some other way if desired.

	* src/al_state.c: Do not use al_state.h anymore. Made the internal
	getters static.

	* src/al_state.h: Removed.

	* src/al_ext.c, src/alc/alc_context.c: Overhauled
	alcGetProcessAddress and alGetProcAddress.

	* src/al_ext.c, src/alc/alc_context.c: Overhauled alcGetEnumValue
	and alGetEnumValue.

	* doc/openal.texi: Added a tiny note about AL_BYTE_LOKI.

2005-11-10  Sven Panne  <sven.panne@aedion.de>

	* doc/openal.texi, src/al_ext.c, src/alc/alc_context.c,
	test/testcallback.c, test/testchannel.c, test/testchannel2.c,
	test/testmulticontext.c, test/testmulticontext2.c,
	test/testpitch.c, test/testpitch2.c, test/testpitch3.c,
	test/testpitch4.c, linux/test/teststartstop.c: Do not use
	AL_INVALID and ALC_INVALID, they are not in the 1.1 spec.

	* ChangeLog, include/AL/alext.h, src/al_ext.c, src/al_filter.c,
	src/al_listen.c, src/al_source.c, test/testchannel.c,
	test/testgain.c, test/testgainlinear.c, test/testmultinothread.c,
	test/testpitch.c, test/testpitch2.c, test/testpitch3.c,
	test/testpitch4.c, test/testpitchnothread.c,
	test/testpitchnothread2.c, test/testqueue.c, test/testqueue2.c,
	test/testqueue3.c, test/testtime.c: The non-standard