@@ -12,27 +12,12 @@
 #include "alc/alc_context.h"
 
 /*
- * _alIsError( ALenum param )
- *
- * Returns AL_TRUE if param names an error, AL_FALSE otherwise.
- */
-ALboolean _alIsError( ALenum param );
-
-/*
  * _alSetError( ALuint cid, ALenum param )
  *
  * Sets the context specific error for the context specified by cid to the
  * value param.
  */
 void _alSetError( ALuint cid, ALenum param );
-
-/*
- * _alGetErrorString( ALenum param )
- *
- * Returns an error string associated with param, or NULL if param does not
- * specify an error token.
- */
-const ALubyte *_alGetErrorString( ALenum param );
 
 /*
  * _alShouldBombOnError_LOKI is a variable that, when set to AL_TRUE, will
